--- a/desafios/ex022/fundo005.html
+++ b/desafios/ex022/fundo005.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste Imagens</title>
+    <title>Posicionamento</title>
     <style>
 
         body {
-            background-image: url(../ex022/imagens/target001.png);
+            height: 98vh;
+            background-image: url('imagens/wallpaper003.jpg');
+            background-position: center center;
+
         }
 
     </style>
-
 </head>
 <body>
     
