--- a/desafios/ex022/fundo006.html
+++ b/desafios/ex022/fundo006.html
@@ -4,38 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Teste Imagem de Fundo</title>
     <style>
 
         body {
             height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
-            background-position: center center;
-            background-repeat: no-repeat;
             background-size: cover;
+            background-repeat: no-repeat;
         }
 
         main {
             background-color: white;
+            ;
             width: 400px;
-            padding: 10px;
             margin: auto;
-            border: 1px solid darkblue;
-            border-radius: 15px;
+            border: 2px solid darkblue;
+            border-radius: 20px;
+            padding: 10px;
         }
-            
+
 
     </style>
 </head>
 <body>
-        <main>
-            <h1>Teste de Imagem de Fundo</h1>
 
+    <main>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis cupiditate architecto nulla quis aperiam tempore natus dignissimos atque, corporis amet quaerat doloribus magni qui esse. Praesentium aperiam hic consectetur vel. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum, asperiores. Soluta qui earum voluptates repellendus fugiat ipsum aliquid consequatur tempora aspernatur repudiandae mollitia voluptate numquam, quidem eos rerum tenetur voluptas. </p>
+        <h1> Teste de Imagem</h1>
 
-
-        </main>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia alias autem praesentium molestiae provident distinctio quis quaerat. Quia vel, temporibus necessitatibus fuga qui adipisci at, repellat explicabo eos, reprehenderit asperiores. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae eos, accusantium odit quo officia quibusdam consectetur possimus nostrum id, architecto cupiditate, earum perspiciatis exercitationem repudiandae obcaecati molestiae sed dolorum labore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, nostrum. Obcaecati illo, alias aspernatur impedit nemo delectus architecto hic enim dignissimos distinctio quidem dolorem velit est consequatur iure eveniet optio.
+        </p>
+    </main>
+    
 </body>
 </html>
