--- a/desafios/ex024/indextest.html
+++ b/desafios/ex024/indextest.html
@@ -21,7 +21,7 @@
        
     </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia<br>
@@ -33,7 +33,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes<br>
             É tudo abreviado<br>
@@ -45,7 +45,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             <p>
                 Arroba agora não pesa<br>
@@ -69,7 +69,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Tenho saudade das cartas<br>
             Escritas com a própria mão<br>
@@ -81,7 +81,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         
             <p>
                 Agora, escrevo e envio<br>
